--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section class="hero">
-    <h2>Your Gateway to Simple Web Design</h2>
+    <h2>Your Gateway to Simple Web Design for aws Amplify</h2>
     <p>Clean, responsive and easy to understand.</p>
     <a href="#" class="btn">Get Started</a>
   </section>
