--- a/index.html
+++ b/index.html
@@ -3,30 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
+  <title>Diksha Adhikari</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Welcome to My Website</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h2>Your Gateway to Simple Web Design</h2>
-    <p>Clean, responsive and easy to understand.</p>
-    <a href="#" class="btn">Get Started</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
-  </footer>
+  <div class="container">
+    <div class="card">
+      <img src="profile.jpg.jpeg" alt="Diksha Adhikari" class="profile-img" />
+      <h1>Diksha Adhikari</h1>
+      <p class="title">Health Assistant | Nepal</p>
+      <p>Dedicated to community healthcare and patient support.</p>
+      <a href="mailto:example@email.com" class="button">Contact Me</a>
+    </div>
+  </div>
 </body>
 </html>
