--- a/index.html
+++ b/index.html
@@ -2,43 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Diksha Adhikari</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<<<<<<< HEAD
-  <div class="container">
+  <div class="main-container">
     <div class="card">
-      <img src="profile.jpg.jpeg" alt="Diksha Adhikari" class="profile-img" />
+      <img src="profile.jpg.jpeg" alt="Diksha Adhikari" class="profile-img"/>
       <h1>Diksha Adhikari</h1>
-      <p class="title">Health Assistant | Nepal</p>
-      <p>Dedicated to community healthcare and patient support.</p>
+      <p class="subtitle">Health Assistant · Nepal</p>
+      <p class="bio">
+        I am passionate about community healthcare, patient well-being, and clinical excellence. I aim to bring accessible healthcare to rural areas with compassion and care.
+      </p>
+
+      <div class="social-links">
+        <a href="mailto:example@email.com" class="email"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+      </div>
+
       <a href="mailto:example@email.com" class="button">Contact Me</a>
     </div>
   </div>
-=======
-  <header>
-    <h1>Welcome to My Website</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h2>Your Gateway to Simple Web Design for aws Amplify</h2>
-    <p>Clean, responsive and easy to understand.</p>
-    <a href="#" class="btn">Get Started</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
-  </footer>
->>>>>>> c83b81ee2b59bf109dc2bb4a492e52ec288ac3db
 </body>
 </html>
